# idleshutdown

./: .gitignore  CMakeLists.txt  main.cpp
lib/: key.cpp  key.h  timer.cpp  timer.h
resources/: dialog.rc
